--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "eslint": "^8.0.0",
     "googleapis": "^88.2.0",
     "reps": "^1.0.6",
-    "webuntis": "^1.15.2"
+    "webuntis": "^1.15.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {},
   "scripts": {
