--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "eslint": "^8.0.0",
     "googleapis": "^88.2.0",
     "reps": "^1.0.6",
     "webuntis": "^1.15.2",
     "winston": "^3.3.3"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/DerArkeN/Untis-Google/issues"
   },
-  "homepage": "https://github.com/DerArkeN/Untis-Google#readme"
+  "homepage": "https://github.com/DerArkeN/Untis-Google#readme",
+  "devDependencies": {
+    "eslint": "^8.3.0"
+  }
 }
