--- a/.env(default)
+++ b/.env(default)
@@ -9,4 +9,4 @@ CREDS=
 CALENDAR_ID=
 
 #CONFIG
-CLASSES="geo3, g2, M2, Mu1, ch1, eth2, bio2, inf1, gk3, E1, d2, s3"
+CLASSES="geo3, g2, M2, Mu1, ch1, eth2, bio2, vma1, gk3, E1, d2, s3"
