--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "date-fns": "^2.28.0",
     "dotenv": "^10.0.0",
     "googleapis": "^88.2.0",
+    "pushsafer-notifications": "^0.1.9",
     "reps": "^1.0.6",
     "webuntis": "^1.15.2",
     "winston": "^3.3.3"
