--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "winston": "^3.3.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx nodemon",
+	"build": "tsc",
+	"start": "npm run build && node dist/index.js",
+	"lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -26,6 +29,9 @@
   },
   "homepage": "https://github.com/DerArkeN/Untis-Google#readme",
   "devDependencies": {
-    "eslint": "^8.3.0"
+    "eslint": "^8.3.0",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
