added check range and improved logging

--- a/.env.sample
+++ b/.env.sample
@@ -4,15 +4,17 @@ WEBURL=""
 WEBUSER=""
 PASSWORD=""
 
-#Google (Creds without ""!!!)
+#Google (Creds without "")
 CREDS=
 CALENDAR_ID=""
 
 #CONFIG
 #(Leave empty for all classes)
 CLASSES=""
-#Recommended: >30
-INTERVAL_MINUTES="30"
+#The interval in which checks for changes are done (recommended: >30)
+INTERVAL_MINUTES=30
+#The range in days in which the checks are perfomed in (default: 30)
+RANGE_DAYS=
 
 #PUSHSAFER
 PUSHENABLED="false"
