--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "cli-progress": "^3.12.0",
     "date-fns": "^2.28.0",
     "dotenv": "^10.0.0",
     "googleapis": "^88.2.0",
