--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
   "main": "index.js",
   "dependencies": {
     "cli-progress": "^3.12.0",
-    "date-fns": "^2.28.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^10.0.0",
     "googleapis": "^88.2.0",
     "pushsafer-notifications": "^0.1.9",
-    "webuntis": "^1.15.2",
+    "webuntis": "^1.22.1",
     "winston": "^3.3.3"
   },
   "scripts": {
-    "dev": "npx nodemon",
     "build": "tsc",
-    "start": "npm run build && node dist/index.js",
+    "start": "npm run build && node build/index.js",
     "lint": "eslint . --ext .ts"
   },
   "repository": {
@@ -30,8 +29,6 @@
   "homepage": "https://github.com/DerArkeN/Untis-Google#readme",
   "devDependencies": {
     "@types/node": "^20.8.4",
-    "eslint": "^8.3.0",
-    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
