--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,8 @@
     "noImplicitAny": true, /* Enable error reporting for expressions and declarations with an implied 'any' type. */
 
     /* Completeness */
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true, /* Skip type checking all .d.ts files. */
+
+    "composite": true
   }
 }
