migration to json files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,8 @@
     /* Completeness */
     "skipLibCheck": true, /* Skip type checking all .d.ts files. */
 
+    "resolveJsonModule": true,
+
     "composite": true
   }
 }
