--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.6.2",
     "cli-progress": "^3.12.0",
     "date-fns": "^2.30.0",
     "dotenv": "^10.0.0",
